# Quantum-Classical-hybrid

./: .dockerignore  .gitmodules  CMakeLists.txt  Diffusion.md  Dockerfile  GaussianNoise.cpp  GaussianNoise.hpp  HOW-TO.md  LayerNomalization.cpp  PythonBindings.  PythonBindings.cpp  README.md  TODO.md  architecture.md  bert_minimal_test  best_practices.md  diffusion_model_test  diffusion_sample_test  epsilonpredictor.py  main.cpp  tokenizer.cpp  tokenizer.hpp
.github/: FUNDING.yml
.github/workflow/: ci.yml
DataProcessing/: GaussianNoise.cpp  sampleData.hpp
DiT/: BetaSchedule.cpp  BetaSchedule.hpp  Diffusion.cpp  Diffusion.md  Diffusion_Sample.cpp  Diffusion_model.cpp  Diffusion_model.hpp  GaussianDiffusion.cpp  GaussianDiffusion.hpp  NormalDist.cpp  Utils.hpp  Utils.md  main.cpp  meanmodel.cpp  meanmodel.hpp  utils.cpp
DiT/NN/: EpsilonPredictor.hpp
DiT/NN/Layers/: ConvolutionalLayer.cpp  ConvolutionalLayer.hpp  PoolingLayer.cpp
NN/: ConvolutionalLayer.cpp  ConvolutionalLayer.hpp  EpsilonPredictor.cpp  NeuralNetwork.cpp  NeuralNetwork.hpp  test_epsilonpredictor.py
NN/Layers/: ConvolutionalLayer.cpp  Flatten.cpp  Flatten.hpp  FullyConnectedLayer.cpp  PoolingLayer.cpp  PoolingLayer.hpp  ReluLayer.cpp  ReluLayer.hpp
diffusion_sample_test.dSYM/Contents/: Info.plist
diffusion_sample_test.dSYM/Contents/Resources/DWARF/: diffusion_sample_test
diffusion_sample_test.dSYM/Contents/Resources/Relocations/aarch64/: diffusion_sample_test.yml
py/: .env  preprocessing.py  requirements.txt
quantum_classical_hybrid/: .env  .py  __init__.py  preprocessing.py  requirements.txt  setup.py
src/: archtecture.md  decoder planning.md
src/Bindings/: DataWrapper.cpp  DiTWrapper.cpp  PreprocessingBindings.cpp  quantumWrapper.cpp  utils.cpp
src/ClassicalDiT/: BetaSchedule.cpp  Diffusion_Sample.cpp  Diffusion_model.cpp  Diffusion_model.hpp  GaussianDiffusion.cpp  NormalDist.cpp  main.cpp  train_diffusion_model.cpp  train_diffusion_model.hpp
src/ClassicalDiT/NN/: EpsilonPredictor.cpp  EpsilonPredictor.hpp  NeuralNetwork.hpp
src/ClassicalDiT/NN/Layers/: ConvolutionalLayer.cpp
src/ClassicalDiT/tests/: BetaSchedule_tests.cpp  Diffusion_model_test.cpp  Diffusion_sample_test.cpp  Gaussian_Diffusion_test.cpp
src/Compression/: QuantumCompressor.cpp  QuantumCompressor.hpp  archtecture.md
src/DataProcessing/: GaussianNoise.cpp  GaussianNoise.hpp  LayerNomalization.cpp  PreprocessingBindings.cpp  main.cpp  sampleData.cpp  tokenizer.cpp  tokenizer.hpp
src/DataProcessing/models/: GaussianNoise.cpp  GaussianNoise.hpp  LayerNormalization.cpp  LayerNormalization.hpp  LinearRegression.cpp  LinearRegression.hpp  sampleData.cpp  sampleData.hpp
src/DataProcessing/models/tests/: Integration_GaussianNoise_LayerNormalization.cpp  Integration_LinearRegression_GaussianNoise_LayerNormalization.cpp  LayerNormalizing_tests.cpp  LinearRegression_basic_tests.cpp  gaussianNoise_performance_test.cpp  gaussianNoise_test.cpp  sampleData_basic_tests.cpp  test_results.md
src/DataProcessing/normaliser/: bert.cpp  bert.hpp  byte_level.cpp  byte_level.hpp  delimiter.cpp  digits.cpp  digits.hpp  image_resize.cpp  metaspace.cpp  metaspace.hpp  prepend.cpp  prepend.hpp  replace.cpp  replace.hpp  spilt.cpp  stb_image.h  unicode.cpp  unicode_processor.cpp  unicode_processor.hpp  utils.cpp
src/DataProcessing/normaliser/image/: image_resize.cpp  image_resize.hpp  stb_image_resize.h
src/DataProcessing/normaliser/tests/: bert_minimal_test.cpp  bert_test.cpp  byte_test.cpp  prepend_test.cpp  replace_test.cpp
src/DataProcessing/pre_tokenizer/: bert.cpp  byte_level.hpp  digits.cpp  metaspace.cpp  punchtuation.cpp  sequence.cpp  spilt.cpp  whitespace.cpp
src/DataProcessing/tests/: LayerNormalization_edge_cases.cpp  LayerNormalization_performance.cpp  LinearRegression_edge_cases.cpp  gaussianNoise_edge_cases.cpp  gaussianNoise_thorough_test.cpp  tokenizer_test.cpp
src/DataProcessing/tokenizer/: tokenizer.cpp  tokenizer.hpp
src/DiT/: Diffusion_Sample.cpp  Diffusion_Sample.hpp  Diffusion_model.cpp  GaussianDiffusion.cpp  NormalDist.hpp  main.cpp  train_diffusion_model.cpp
src/DiT/NN/: EpsilonPredictor.cpp  EpsilonPredictor.hpp  NeuralNetwork.cpp
src/DiT/NN/Layers/: FullyConnected.hpp  FullyConnectedLayer.cpp  ReluLayer.hpp
src/DiT/tests/: BetaSchedule_edge_cases.cpp  Diffusion_model_test.cpp  Diffusion_sample_test.cpp  Gaussian_Diffusion_test.cpp
src/Quantum_encoder/: Archtecture.md  Interference Echo for state.md  QFT.md  hamiltonian.hpp  model.md
src/Quantum_encoder/Compression/: Space_momentum.cu  Wave_Propagation.md  core_propagation.cpp  core_propagation.hpp  furtheer_notes.md  propagate_hamiltonian.cpp  propagate_hamiltonian.hpp  wavelet_compression.cpp  wavelet_compression.hpp
src/Quantum_encoder/Hamiltonian/: H_map.cpp  H_map.hpp  time_H.cpp  time_H.hpp  training.cpp  training.hpp
src/Quantum_encoder/Model_Circuit/: model_circuit.cpp  model_circuit.hpp
src/Quantum_encoder/convert_classical_state_to_Quantum.md/: AngleEncoder.cpp  AngleEncoder.hpp  HybridEncoder.cpp  HybridEncoder.hpp
src/Quantum_encoder/converttoqubit/: AngleEncoder.cpp  AngleEncoder.hpp  HybridEncoder.cpp  HybridEncoder.hpp  Hybrid_Encoder.md  documentation.md
src/Quantum_encoder/tests/: HybridEncoderTest.cpp  quantum_test.cpp
src/quantum_library/: AngleEncoder.cpp  HybridEncoder.cpp  quantum.cpp  quantum.hpp
src/utils/: architecture.md  benchmark.hpp  dotenv.cpp  dotenv.hpp  echo_pipeline.cu  json.cpp  json.hpp  logger.hpp  test_echo.cpp
src/utils/RNN/: echo_pipeline.cu  rnn.md
